--- a/docs/3.0rc/automate/events/automations-triggers.mdx
+++ b/docs/3.0rc/automate/events/automations-triggers.mdx
@@ -783,7 +783,7 @@ if __name__ == "__main__":
     serve(upstream_deployment, downstream_deployment)
 ```
 
-First, start the `serve` process to listen for scheduled runs of your deployments:
+First, start the `serve` process to listen for scheduled deployments runs:
 
 ```bash
 python event_driven_deployments.py
