--- a/docs/3.0rc/automate/events/automations-triggers.mdx
+++ b/docs/3.0rc/automate/events/automations-triggers.mdx
@@ -751,7 +751,7 @@ associate an external process with the Prefect events API that can trigger downs
 
 ## Example: Trigger a downstream deployment with an event
 
-This example shows how to use triggers to schedule a downstream deployment when an upstream deployment completes.
+This example shows how to use a trigger to schedule a downstream deployment when an upstream deployment completes.
 
 ```python event_driven_deployments.py
 from prefect import flow, serve
