--- a/docs/integrations/prefect-azure/index.mdx
+++ b/docs/integrations/prefect-azure/index.mdx
@@ -13,8 +13,8 @@ For example, you can retrieve secrets, read and write Blob Storage objects, and 
 
 ### Install prefect-azure
 
-The following command will install a version prefect-azure compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the latest version of Prefect as well.
+The following command will install a version of prefect-azure compatible with your installed version of Prefect. 
+If you don't already have Prefect installed, it will install the newest version of Prefect as well.
 
 ```bash
 pip install "prefect[azure]"
@@ -97,7 +97,7 @@ Refer to the prefect-azure API documentation linked in the sidebar to explore al
 First install the main library compatible with your Prefect version:
 
 ```bash
-pip install prefect[azure]
+pip install "prefect[azure]"
 ```
 
 Then install the additional capabilities you need.
