--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -13,14 +13,14 @@ For example, you can retrieve secrets using AWS Secrets Manager, read and write 
 
 ### Install prefect-aws
 
-The following command will install a version of prefect-azure compatible with your installed version of Prefect. 
+The following command will install a version of prefect-aws compatible with your installed version of Prefect. 
 If you don't already have Prefect installed, it will install the newest version of Prefect as well.
 
 ```bash
 pip install "prefect[aws]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-azure:
+Upgrade to the latest versions of Prefect and prefect-aws:
 
 ```bash
 pip install -U "prefect[aws]"
