--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -8,37 +8,31 @@ The prefect-bitbucket library makes it easy to interact with Bitbucket repositor
 
 ### Prerequisites
 
-- [Prefect installed](/3.0/get-started/install/).
 - A [Bitbucket account](https://bitbucket.org/product).
 
 ### Install prefect-bitbucket
 
 
-Install or update to the latest version of the prefect-bitbucket library and dependencies.
+The following command will install a version of prefect-bitbucket compatible with your installed version of Prefect. 
+If you don't already have Prefect installed, it will install the newest version of Prefect as well.
 
-<Tabs>
-    <Tab title="Prefect 2">
-    ```bash
-    pip install -U prefect-bitbucket
-    ```
-    </Tab>
-    <Tab title="Prefect 3">
-    ```bash
-    pip install -U -pre prefect-bitbucket
-    ```
-    </Tab>
-</Tabs>
+```bash
+pip install "prefect[bitbucket]"
+```
 
+Upgrade to the latest versions of Prefect and prefect-azure:
+
+```bash
+pip install -U "prefect[bitbucket]"
+```
 
 ### Register newly installed block types
 
 Register the block types in the prefect-bitbucket module to make them available for use.
 
-
 ```bash
 prefect block register -m prefect_bitbucket
 ```
-
 
 ## Examples
 
