--- a/docs/integrations/prefect-dask/index.mdx
+++ b/docs/integrations/prefect-dask/index.mdx
@@ -8,26 +8,20 @@ The `prefect-dask` integration makes it easy to accelerate your flow runs with D
 
 ## Getting started
 
-### Prerequisites
-
-- [Prefect installed](/3.0/get-started/install) in a virtual environment.
-
 ### Install `prefect-dask`
 
-Install or update to the latest version of the prefect-dask library and dependencies.
+The following command will install a version of prefect-dask compatible with your installed version of Prefect. 
+If you don't already have Prefect installed, it will install the newest version of Prefect as well.
 
-<Tabs>
-    <Tab title="Prefect 2">
-    ```bash
-    pip install -U prefect-dask
-    ```
-    </Tab>
-    <Tab title="Prefect 3">
-    ```bash
-    pip install -U -pre prefect-dask
-    ```
-    </Tab>
-</Tabs>
+```bash
+pip install "prefect[dask]"
+```
+
+Upgrade to the latest versions of Prefect and prefect-dask:
+
+```bash
+pip install -U "prefect[dask]"
+```
 
 ## Why use Dask?
 
