--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -20,7 +20,7 @@ If you don't already have Prefect installed, it will install the newest version 
 pip install "prefect[bitbucket]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-azure:
+Upgrade to the latest versions of Prefect and prefect-bitbucket:
 
 ```bash
 pip install -U "prefect[bitbucket]"
