--- a/docs/integrations/prefect-github/index.mdx
+++ b/docs/integrations/prefect-github/index.mdx
@@ -8,27 +8,22 @@ Prefect-github makes it easy to interact with GitHub repositories and use GitHub
 
 ### Prerequisites
 
-- [Prefect installed](/3.0/get-started/install/).
 - A [GitHub account](https://github.com/).
 
 ### Install prefect-github
 
+The following command will install a version of prefect-github compatible with your installed version of Prefect. 
+If you don't already have Prefect installed, it will install the newest version of Prefect as well.
 
-Install or update to the latest version of the prefect-github library and dependencies.
+```bash
+pip install "prefect[github]"
+```
 
-<Tabs>
-    <Tab title="Prefect 2">
-    ```bash
-    pip install -U prefect-github
-    ```
-    </Tab>
-    <Tab title="Prefect 3">
-    ```bash
-    pip install -U -pre prefect-github
-    ```
-    </Tab>
-</Tabs>
+Upgrade to the latest versions of Prefect and prefect-github:
 
+```bash
+pip install -U "prefect[github]"
+```
 
 ### Register newly installed block types
 
@@ -37,7 +32,6 @@ Register the block types in the prefect-github module to make them available for
 ```bash
 prefect block register -m prefect_github
 ```
-
 
 ## Examples
 
