format and more

--- a/docs/integrations/prefect-shell/index.mdx
+++ b/docs/integrations/prefect-shell/index.mdx
@@ -6,41 +6,28 @@ Execute shell commands from within Prefect flows.
 
 ## Getting started
 
-### Prerequisites
-
-Requires an installation of Python 3.9+
-
-We recommend using a Python virtual environment manager such as pipenv, conda, or virtualenv.
-
-These tasks are designed to work with Prefect 3. 
-
 ### Install `prefect-shell`
 
+The following command will install a version of `prefect-shell` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
-Install or update to the latest version of the prefect-shell library and dependencies.
+```bash
+pip install "prefect[shell]"
+```
 
-<Tabs>
-    <Tab title="Prefect 2">
-    ```bash
-    pip install -U prefect-shell
-    ```
-    </Tab>
-    <Tab title="Prefect 3">
-    ```bash
-    pip install -U -pre prefect-shell
-    ```
-    </Tab>
-</Tabs>
+Upgrade to the latest versions of `prefect` and `prefect-shell`:
+
+```bash
+pip install -U "prefect[shell]"
+```
 
 ### Register newly installed block types
 
-Register the block types in the prefect-shell module to make them available for use.
-
+Register the block types in the `prefect-shell` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_shell
 ```
-
 
 ## Examples
 
