--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -13,14 +13,14 @@ For example, you can retrieve secrets using AWS Secrets Manager, read and write 
 
 ### Install prefect-aws
 
-The following command will install a version of prefect-aws compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-aws` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[aws]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-aws:
+Upgrade to the latest versions of `prefect` and `prefect-aws`:
 
 ```bash
 pip install -U "prefect[aws]"
@@ -148,4 +148,4 @@ if __name__ == "__main__":
 
 For assistance using AWS, consult the [AWS documentation](https://docs.aws.amazon.com/) and, in particular, the [Boto3 documentation](https://boto3.amazonaws.com/v1/documentation/api/latest/index.html).
 
-Refer to the prefect-aws API documentation linked in the sidebar to explore all the capabilities of the prefect-aws library.
+Refer to the `prefect-aws` API documentation linked in the sidebar to explore all the capabilities of the `prefect-aws` library.
