--- a/docs/integrations/prefect-azure/index.mdx
+++ b/docs/integrations/prefect-azure/index.mdx
@@ -13,14 +13,14 @@ For example, you can retrieve secrets, read and write Blob Storage objects, and 
 
 ### Install prefect-azure
 
-The following command will install a version of prefect-azure compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-azure` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[azure]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-azure:
+Upgrade to the latest versions of `prefect` and `prefect-azure`:
 
 ```bash
 pip install -U "prefect[azure]"
@@ -90,11 +90,11 @@ If you're using Prefect Cloud, [ACI push work pools](/3.0/deploy/infrastructure-
 
 For assistance using Azure, consult the [Azure documentation](https://learn.microsoft.com/en-us/azure).
 
-Refer to the prefect-azure API documentation linked in the sidebar to explore all the capabilities of the prefect-azure library.
+Refer to the `prefect-azure` API documentation linked in the sidebar to explore all the capabilities of the `prefect-azure` library.
 
 ### Additional installation options
 
-First install the main library compatible with your Prefect version:
+First install the main library compatible with your `prefect` version:
 
 ```bash
 pip install "prefect[azure]"
