--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -2,7 +2,7 @@
 title: prefect-bitbucket
 ---
 
-The prefect-bitbucket library makes it easy to interact with Bitbucket repositories and credentials.
+The `prefect-bitbucket` library makes it easy to interact with Bitbucket repositories and credentials.
 
 ## Getting started
 
@@ -12,15 +12,14 @@ The prefect-bitbucket library makes it easy to interact with Bitbucket repositor
 
 ### Install prefect-bitbucket
 
-
-The following command will install a version of prefect-bitbucket compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-bitbucket` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[bitbucket]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-bitbucket:
+Upgrade to the latest versions of `prefect` and `prefect-bitbucket`:
 
 ```bash
 pip install -U "prefect[bitbucket]"
@@ -28,7 +27,7 @@ pip install -U "prefect[bitbucket]"
 
 ### Register newly installed block types
 
-Register the block types in the prefect-bitbucket module to make them available for use.
+Register the block types in the `prefect-bitbucket` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_bitbucket
