--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -28,7 +28,7 @@ pip install -U "prefect[aws]"
 
 ### Register newly installed block types
 
-Register the block types in the prefect-aws module to make them available for use.
+Register the block types in the `prefect-aws` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_aws
