--- a/docs/integrations/prefect-azure/index.mdx
+++ b/docs/integrations/prefect-azure/index.mdx
@@ -11,7 +11,7 @@ For example, you can retrieve secrets, read and write Blob Storage objects, and 
 
 - An [Azure account](https://azure.microsoft.com/) and the necessary permissions to access desired services.
 
-### Install prefect-azure
+### Install `prefect-azure`
 
 The following command will install a version of `prefect-azure` compatible with your installed version of `prefect`. 
 If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
