--- a/docs/integrations/prefect-bitbucket/index.mdx
+++ b/docs/integrations/prefect-bitbucket/index.mdx
@@ -10,7 +10,7 @@ The `prefect-bitbucket` library makes it easy to interact with Bitbucket reposit
 
 - A [Bitbucket account](https://bitbucket.org/product).
 
-### Install prefect-bitbucket
+### Install `prefect-bitbucket`
 
 The following command will install a version of `prefect-bitbucket` compatible with your installed version of `prefect`. 
 If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
