--- a/docs/integrations/prefect-dbt/index.mdx
+++ b/docs/integrations/prefect-dbt/index.mdx
@@ -11,7 +11,7 @@ Prefect provides a global view of the state of your workflows and allows you to 
 
 - A [dbt Cloud account](https://cloud.getdbt.com/signup) if using dbt Cloud.
 
-### Install prefect-dbt
+### Install `prefect-dbt`
 
 The following command will install a version of `prefect-dbt` compatible with your installed version of `prefect`. 
 If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
