--- a/docs/integrations/prefect-email/index.mdx
+++ b/docs/integrations/prefect-email/index.mdx
@@ -11,7 +11,7 @@ The `prefect-email` library helps you send emails from your Prefect flows.
 - Many email services, such as Gmail, require an [App Password](https://support.google.com/accounts/answer/185833) to successfully send emails.
     If you encounter an error similar to `smtplib.SMTPAuthenticationError: (535, b'5.7.8 Username and Password not accepted...`, it's likely you are not using an App Password.
 
-### Install prefect-email
+### Install `prefect-email`
 
 The following command will install a version of prefect-email compatible with your installed version of Prefect. 
 If you don't already have Prefect installed, it will install the newest version of Prefect as well.
