--- a/docs/integrations/prefect-gcp/index.mdx
+++ b/docs/integrations/prefect-gcp/index.mdx
@@ -11,16 +11,16 @@ For example, you can run flow on Vertex AI or Cloud Run, read and write data to 
 
 - A [GCP account](https://cloud.google.com/) and the necessary permissions to access desired services.
 
-### Install prefect-gcp
+### Install `prefect-gcp`
 
-The following command will install a version of prefect-gcp compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-gcp` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[gcp]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-gcp:
+Upgrade to the latest versions of `prefect` and `prefect-gcp`:
 
 ```bash
 pip install -U "prefect[gcp]"
@@ -28,7 +28,7 @@ pip install -U "prefect[gcp]"
 
 If using BigQuery, Cloud Storage, Secret Manager, or Vertex AI, see [additional installation options](#additional-installation-options).
 
-To install prefect-gcp with all additional capabilities, run the install command above and then run the following command:
+To install `prefect-gcp` with all additional capabilities, run the install command above and then run the following command:
 
 ```bash
 pip install "prefect-gcp[all_extras]"
@@ -243,11 +243,11 @@ def create_bigquery_client():
 
 For assistance using GCP, consult the [Google Cloud documentation](https://cloud.google.com/docs).
 
-Refer to the prefect-gcp API documentation linked in the sidebar to explore all the capabilities of the prefect-gcp library.
+Refer to the `prefect-gcp` API documentation linked in the sidebar to explore all the capabilities of the `prefect-gcp` library.
 
 ### Additional installation options
 
-First install the main library compatible with your Prefect version:
+First install the main library compatible with your `prefect` version:
 
 ```bash
 pip install "prefect[gcp]"
