--- a/docs/integrations/prefect-github/index.mdx
+++ b/docs/integrations/prefect-github/index.mdx
@@ -10,16 +10,16 @@ Prefect-github makes it easy to interact with GitHub repositories and use GitHub
 
 - A [GitHub account](https://github.com/).
 
-### Install prefect-github
+### Install `prefect-github`
 
-The following command will install a version of prefect-github compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-github` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[github]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-github:
+Upgrade to the latest versions of `prefect` and `prefect-github`:
 
 ```bash
 pip install -U "prefect[github]"
@@ -27,7 +27,7 @@ pip install -U "prefect[github]"
 
 ### Register newly installed block types
 
-Register the block types in the prefect-github module to make them available for use.
+Register the block types in the `prefect-github` module to make them available for use.
 
 ```bash
 prefect block register -m prefect_github
@@ -123,4 +123,4 @@ if __name__ == "__main__":
 
 For assistance using GitHub, consult the [GitHub documentation](https://docs.github.com).
 
-Refer to the prefect-github API documentation linked in the sidebar to explore all the capabilities of the prefect-github library.
+Refer to the `prefect-github` API documentation linked in the sidebar to explore all the capabilities of the `prefect-github` library.
