--- a/docs/integrations/prefect-aws/index.mdx
+++ b/docs/integrations/prefect-aws/index.mdx
@@ -11,7 +11,7 @@ For example, you can retrieve secrets using AWS Secrets Manager, read and write 
 
 - An [AWS account](https://aws.amazon.com/account/) and the necessary permissions to access desired services.
 
-### Install prefect-aws
+### Install `prefect-aws`
 
 The following command will install a version of `prefect-aws` compatible with your installed version of `prefect`. 
 If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
