--- a/docs/integrations/prefect-docker/index.mdx
+++ b/docs/integrations/prefect-docker/index.mdx
@@ -2,7 +2,7 @@
 title: prefect-docker
 ---
 
-The prefect-docker library is required to create deployments that will submit runs to most Prefect work pool infrastructure types.
+The `prefect-docker` library is required to create deployments that will submit runs to most Prefect work pool infrastructure types.
 
 ## Getting started
 
@@ -10,16 +10,16 @@ The prefect-docker library is required to create deployments that will submit ru
 
 - [Docker installed](https://www.docker.com/) and running.
 
-### Install prefect-docker
+### Install `prefect-docker`
 
-The following command will install a version of prefect-docker compatible with your installed version of Prefect. 
-If you don't already have Prefect installed, it will install the newest version of Prefect as well.
+The following command will install a version of `prefect-docker` compatible with your installed version of `prefect`. 
+If you don't already have `prefect` installed, it will install the newest version of `prefect` as well.
 
 ```bash
 pip install "prefect[docker]"
 ```
 
-Upgrade to the latest versions of Prefect and prefect-docker:
+Upgrade to the latest versions of `prefect` and `prefect-docker`:
 
 ```bash
 pip install -U "prefect[docker]"
@@ -31,4 +31,4 @@ See the Prefect [Workers docs](/3.0/deploy/infrastructure-examples/docker) to le
 
 For assistance using Docker, consult the [Docker documentation](https://docs.docker.com/).
 
-Refer to the prefect-docker SDK documentation linked in the sidebar to explore all the capabilities of the prefect-docker library.
+Refer to the `prefect-docker` SDK documentation linked in the sidebar to explore all the capabilities of the `prefect-docker` library.
